Add sketching functionality

--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,9 @@ h1 {
     background-color: coral;
 }
 
-.individual-grids:hover {
+/* .individual-grids:hover {
     background-color: black;
-}
+} */
 
 .individual-grids-hover {
     background-color: black;
